boatloads of updates

--- a/firmware/PhysicsLab.cydsn/PhysicsLab_timing.html
+++ b/firmware/PhysicsLab.cydsn/PhysicsLab_timing.html
@@ -539,22 +539,18 @@ function getElementsByClass(rootNode, elemName, className)
 <tr> <td class="prop"> Project :</td>
 <td class="proptext"> PhysicsLab</td></tr>
 <tr> <td class="prop"> Build Time :</td>
-<td class="proptext"> 05/22/15 05:27:55</td></tr>
+<td class="proptext"> 06/12/15 05:29:09</td></tr>
 <tr> <td class="prop"> Device :</td>
 <td class="proptext"> CY8C4247LQI-BL483</td></tr>
 <tr> <td class="prop"> Temperature :</td>
 <td class="proptext"> -40C - 85C</td></tr>
-<tr> <td class="prop"> VDDA.1 :</td>
+<tr> <td class="prop"> VDDA :</td>
 <td class="proptext"> 3.30</td></tr>
-<tr> <td class="prop"> VDDA.CTB :</td>
+<tr> <td class="prop"> VDDA_CTB :</td>
 <td class="proptext"> 3.30</td></tr>
-<tr> <td class="prop"> VDDD.0 :</td>
+<tr> <td class="prop"> VDDD :</td>
 <td class="proptext"> 3.30</td></tr>
-<tr> <td class="prop"> VDDIO_0 :</td>
-<td class="proptext"> 3.30</td></tr>
-<tr> <td class="prop"> VDDIO_1 :</td>
-<td class="proptext"> 3.30</td></tr>
-<tr> <td class="prop"> VDDIO_2 :</td>
+<tr> <td class="prop"> VDDIO :</td>
 <td class="proptext"> 3.30</td></tr>
 <tr> <td class="prop"> VDDR_BGLS :</td>
 <td class="proptext"> 3.30</td></tr>
