a shitload of updates

--- a/firmware/PhysicsLab.cydsn/PhysicsLab_timing.html
+++ b/firmware/PhysicsLab.cydsn/PhysicsLab_timing.html
@@ -539,18 +539,22 @@ function getElementsByClass(rootNode, elemName, className)
 <tr> <td class="prop"> Project :</td>
 <td class="proptext"> PhysicsLab</td></tr>
 <tr> <td class="prop"> Build Time :</td>
-<td class="proptext"> 06/12/15 05:29:09</td></tr>
+<td class="proptext"> 11/07/15 10:01:27</td></tr>
 <tr> <td class="prop"> Device :</td>
 <td class="proptext"> CY8C4247LQI-BL483</td></tr>
 <tr> <td class="prop"> Temperature :</td>
 <td class="proptext"> -40C - 85C</td></tr>
-<tr> <td class="prop"> VDDA :</td>
+<tr> <td class="prop"> VDDA_1 :</td>
 <td class="proptext"> 3.30</td></tr>
 <tr> <td class="prop"> VDDA_CTB :</td>
 <td class="proptext"> 3.30</td></tr>
-<tr> <td class="prop"> VDDD :</td>
+<tr> <td class="prop"> VDDD_0 :</td>
 <td class="proptext"> 3.30</td></tr>
-<tr> <td class="prop"> VDDIO :</td>
+<tr> <td class="prop"> VDDIO_0 :</td>
+<td class="proptext"> 3.30</td></tr>
+<tr> <td class="prop"> VDDIO_1 :</td>
+<td class="proptext"> 3.30</td></tr>
+<tr> <td class="prop"> VDDIO_2 :</td>
 <td class="proptext"> 3.30</td></tr>
 <tr> <td class="prop"> VDDR_BGLS :</td>
 <td class="proptext"> 3.30</td></tr>
@@ -617,16 +621,8 @@ Clock Summary Section</span>
 <tr> 
  <td class = "text_info">Clock_1(FFB)</td>
  <td class = "text_info">Clock_1(FFB)</td>
- <td class = "number">12.000&nbsp;kHz</td>
- <td class = "number">12.000&nbsp;kHz</td>
- <td class = "number"> N/A </td>
- <td class = "text_info"> </td>
-</tr>
-<tr> 
- <td class = "text_info">Clock_2(FFB)</td>
- <td class = "text_info">Clock_2(FFB)</td>
- <td class = "number">10.000&nbsp;kHz</td>
- <td class = "number">10.000&nbsp;kHz</td>
+ <td class = "number">200.000&nbsp;kHz</td>
+ <td class = "number">200.000&nbsp;kHz</td>
  <td class = "number"> N/A </td>
  <td class = "text_info"> </td>
 </tr>
@@ -681,16 +677,8 @@ Clock Summary Section</span>
 <tr> 
  <td class = "text_info">Clock_1</td>
  <td class = "text_info">CyHFCLK</td>
- <td class = "number">12.000&nbsp;kHz</td>
- <td class = "number">12.000&nbsp;kHz</td>
- <td class = "number"> N/A </td>
- <td class = "text_info"> </td>
-</tr>
-<tr> 
- <td class = "text_info">Clock_2</td>
- <td class = "text_info">CyHFCLK</td>
- <td class = "number">10.000&nbsp;kHz</td>
- <td class = "number">10.000&nbsp;kHz</td>
+ <td class = "number">200.000&nbsp;kHz</td>
+ <td class = "number">200.000&nbsp;kHz</td>
  <td class = "number"> N/A </td>
  <td class = "text_info"> </td>
 </tr>
